--- a/scss/mainNat.scss
+++ b/scss/mainNat.scss
@@ -94,34 +94,35 @@
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
-.drop{
-    position: relative;
-    width: 300px;
-    height: 300px;
-    box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.05),
-        25px 35px 20px rgba(0, 0, 0, 0.05),
-        25px 30px 30px rgba(0, 0, 0, 0.05),
-        inset -20px -20px 25px rgba(255, 255, 255, 0.9);
-    transition: 0.5s ease-in-out;
-}
+$clr: #eff0f4;  
 
-.drop:nth-child(1) {
+.drop {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.05),
+    25px 35px 20px rgba(0, 0, 0, 0.05),
+    25px 30px 30px rgba(0, 0, 0, 0.05),
+    inset -20px -20px 25px rgba(255, 255, 255, 0.9);
+  transition: 0.5s ease-in-out;
+
+  &:nth-child(1) {
     border-radius: 45% 55% 31% 69% / 49% 45% 55% 51%;
-}
+  }
 
-.drop:nth-child(2) {
+  &:nth-child(2) {
     border-radius: 50% 50% 31% 69% / 66% 36% 64% 34%;
-}
+  }
 
-.drop:nth-child(3) {
+  &:nth-child(3) {
     border-radius: 57% 43% 43% 57% / 43% 43% 57% 57%;
-}
+  }
 
-.drop:hover {
+  &:hover {
     border-radius: 50%;
-}
+  }
 
-.drop::before {
+  &::before {
     content: '';
     position: absolute;
     top: 15%;
@@ -131,9 +132,9 @@
     background-color: #fff;
     border-radius: 50%;
     opacity: 0.9;
-}
+  }
 
- .drop::after {
+  &::after {
     content: '';
     position: absolute;
     top: 22%;
@@ -143,9 +144,9 @@
     background-color: #fff;
     border-radius: 50%;
     opacity: 0.9;
-}
+  }
 
- .content {
+  .content {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -154,52 +155,55 @@
     text-align: center;
     padding: 50px;
     gap: 15px;
-    h2{
-        position: relative;
-        width: 80px;
-        height: 80px;
-        background-color: #eff0f4;
-        border-radius: 50%;
-        box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.1),
-            inset -2px -5px 10px rgba(255, 255, 255, 0.1),
-            15px 15px 10px rgba(0, 0, 0, 0.05),
-            15px 10px 15px rgba(0, 0, 0, 0.25);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 2em;
-        color: var(--clr);
+
+    h2 {
+      position: relative;
+      width: 80px;
+      height: 80px;
+      background-color: $clr;
+      border-radius: 50%;
+      box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.1),
+        inset -2px -5px 10px rgba(255, 255, 255, 0.1),
+        15px 15px 10px rgba(0, 0, 0, 0.05),
+        15px 10px 15px rgba(0, 0, 0, 0.25);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2em;
+      color: var(--clr);
     }
+
     a {
-        position: relative;
-        padding: 10px 25px;
-        background: var(--clr);
-        text-decoration: none;
-        color: #fff;
-        border-radius: 25px;
-        font-weight: 500;
-        text-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
-        opacity: 0.75;
-        transition: 0.5s;
+      position: relative;
+      padding: 10px 25px;
+      background: var(--clr);
+      text-decoration: none;
+      color: #fff;
+      border-radius: 25px;
+      font-weight: 500;
+      text-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+      opacity: 0.75;
+      transition: 0.5s;
+
+      &:hover {
+        opacity: 1;
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 8px;
+        left: 68px;
+        transform: translateX(-50%);
+        width: 65%;
+        height: 5px;
+        border-radius: 5px;
+        background-color: rgba(255, 255, 255, 0.5);
+      }
     }
-    
+  }
 }
 
- .drop .content a:hover {
-    opacity: 1;
-}
-
- .drop .content a::before {
-    content: '';
-    position: absolute;
-    top: 8px;
-    left: 68px;
-    transform: translateX(-50%);
-    width: 65%;
-    height: 5px;
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.5);
-}
 
 /* Puntos de Actividad */
 
