--- a/scss/_basquetball.scss
+++ b/scss/_basquetball.scss
@@ -25,10 +25,10 @@
     background-color: #FF4500;
     margin-left: 40px;
 }
-<<<<<<< HEAD
+
 .marco-bas{
     margin: auto;
-=======
+}
 
 .container{
     font-family: sans-serif;
@@ -38,7 +38,7 @@
     margin: 10vmin;
     overflow: hidden;
     transform: skew(5deg);
->>>>>>> 65dfd7c8ba5a8396cb21ea6fcc3cbdcf143c2885
+
 }
 
 .carrusel{
@@ -53,8 +53,7 @@
     height: 75vmin;
     position: relative;
 
-<<<<<<< HEAD
-=======
+
 }
 
 .car__head{
@@ -108,7 +107,6 @@ h1{
 }
 
 
->>>>>>> 65dfd7c8ba5a8396cb21ea6fcc3cbdcf143c2885
 footer{
     background: #343434;
     padding-top: 50px;
