--- a/scss/_nutricion.scss
+++ b/scss/_nutricion.scss
@@ -1,4 +1,5 @@
 @import "menu";
+@import "footer";
 
 body{
     background-color: rgb(240, 240, 240);
@@ -201,6 +202,38 @@ body{
         }
         #img2{
             transform: translateX(-40px) translateY(90px) rotate(-70deg); 
+        }
+    }
+}
+
+#margen-ubicacion{
+    margin: 0;
+    padding: 0;
+}
+
+.ubicacion{
+    height: 650px;
+    display: flex;
+    justify-content: center;
+    .ubicacion-info{
+        margin-top: 0px;
+        width: 80%;
+        text-align: center;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .ubicacion-contenedor{
+        height: 500px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 4px solid lightblue;
+        border-radius: 25px;
+        iframe{
+            width: 95%;
+            border-radius: 25px;
         }
     }
 }
