--- a/scss/_basquetball.scss
+++ b/scss/_basquetball.scss
@@ -47,7 +47,7 @@
 }
 
 
-.card{
+/*.card{
     flex: 1;
     transition: all 1s ease-in-out;
     height: 75vmin;
@@ -104,7 +104,7 @@
 h1{
     font-size: 10px;
     text-align: center;
-}
+}*/
 
 
 footer{
