--- a/scss/main.scss
+++ b/scss/main.scss
@@ -75,12 +75,12 @@ $margenes2:(
 );
 
 $bordes:(
-    1: blue,
-    2: lightblue,
-    3: lightgreen,
-    4: orange,
-    5: red,
-    6: yellow,
+    1: #8f3457,
+    2: #0c9d96,
+    3: #4c7d2b,
+    4: #eb6b22,
+    5: #d1261c,
+    6: #f19f33,
 );
 
 .link{
