--- a/css/main.css
+++ b/css/main.css
@@ -451,6 +451,71 @@ h3 {
   background-color: #FF4500;
   margin-left: 40px; }
 
+.container {
+  font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10vmin;
+  overflow: hidden;
+  transform: skew(5deg); }
+
+.card {
+  flex: 1;
+  transition: all 1s ease-in-out;
+  height: 75vmin;
+  position: relative; }
+
+.car__head {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  min-width: 100%;
+  background: #ff1eadbf;
+  color: black;
+  padding: 0.5em;
+  transform: rotate(-90deg);
+  transform-origin: 0% 0%;
+  transition: all 0.5s ease-in-out;
+  text-align: center;
+  font-size: 1em;
+  white-space: nowrap; }
+
+.card img {
+  width: 90%;
+  height: 90%;
+  object-fit: cover;
+  transition: all 1s ease-in-out;
+  filter: grayscale(100%); }
+
+.card:not(:nth-child(5)) {
+  margin-right: 1em; }
+
+.card:hover {
+  flex-grow: 10; }
+
+.card:hover img {
+  filter: grayscale(0); }
+
+.card:hover .card__head {
+  text-align: center;
+  top: calc(100% - 2em);
+  background: #00000080;
+  color: white;
+  font-size: 2em;
+  transform: rotate(0deg) skew(-5deg); }
+
+.carrusel {
+  height: 550px;
+  width: 800px;
+  text-align: center;
+  margin-left: 400px; }
+
+.carruselimg {
+  margin-right: 410px;
+  height: 800px;
+  margin-top: -50px; }
+
 footer {
   background: #343434;
   padding-top: 50px; }
