--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -51,3 +51,32 @@
         }
     }
 }
+
+  /* Responsive */
+
+  @media screen and (max-width: 1023px){
+
+    .logoP{
+        img{
+            width: 150px;
+            height: 150px;
+        }
+        h1{
+            font-size: 26px;
+        }
+    }
+
+    .maslogos{
+        img{
+            width: 30px;
+            height: 30px;
+        }
+        button{
+            p{
+                font-size: 12px;
+            }
+        }
+    }
+
+
+  }
