--- a/scss/mainNat.scss
+++ b/scss/mainNat.scss
@@ -243,12 +243,13 @@ $clr: #eff0f4;
 
 /* Cards de consejos */
 
-.cont{
+.contHo{
   display: flex;
   justify-content: center;
   margin: 30px 0px 80px 0px;
   gap: 60px;
 }
+
 .card2{
   width: 240px;
   height: 370px;
@@ -468,4 +469,197 @@ input {
     transform: translate3d(70%, 0, -220px);
     --current-color1: #eceaed;
     --current-color2: #404457;
+  }
+
+  /* Responsive */
+
+  @media screen and (max-width: 1023px){
+    .contHo{
+      flex-direction: column;
+    }
+
+    .contHijo1{
+      width: 80%;
+      height: 100%;
+    }
+    .contcolum{
+      flex-direction: column;
+      align-items: center;
+    }
+
+    input {
+      display: none;
+    }
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transform-style: preserve-3d;
+      flex-direction: column;
+      margin: 100px 0px 0px 100px;
+    }
+    .cards {
+      position: relative;
+      height: 500px;
+      width: 430px;
+      margin-bottom: 20px;
+      perspective: 1000px;
+      transform-style: preserve-3d;
+    }
+    .cards label {
+      position: absolute;
+      border-radius: 15px;
+      width: 400px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      cursor: pointer;
+      transition: transform 0.5s ease;
+    }
+    .cards .card {
+      position: relative;
+      height: 600px;
+      width: 400px;
+      background-color: #b2e9ff;
+      border-radius: 10px;
+      padding: 30px 35px;
+      border: 2px solid #284aa7;
+    }
+    .cards .image {
+      display: flex;
+      justify-content: space-between;
+    }
+    .cards .image img {
+      border-radius: 5px;
+      box-shadow: 15px 15px 40px rgba(0, 0, 0, 50%);
+      margin-top: 23px;
+      width: 86%;
+      height: 220px;
+      object-fit: cover;
+      transition: all 0.7s;
+    }
+    .cards .image img:hover {
+      transform: scale(1.05);
+    }
+    .cards .image .dots {
+      text-align: center;
+    }
+    .dots div {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      margin-bottom: 10px;
+    }
+    .dots div:nth-child(1) {
+      background-color: var(--current-color1);
+    }
+    .dots div:nth-child(2) {
+      background-color: #5b85f9;
+    }
+    .dots div:nth-child(3) {
+      background-color: #000;
+    }
+    .card .infos {
+      display: block;
+      text-align: center;
+      padding-top: 60px;
+    }
+    .card .infos span {
+      display: block;
+    }
+    .infos .name {
+      font-size: 20px;
+      color: #3362e4;
+      letter-spacing: 8px;
+      margin-bottom: 20px;
+      padding-left: 25%;
+      transition: all 0.6s ease;
+    }
+    .card .lorem {
+      font-size: 15.5px;
+      color: #eceaed;
+      margin: 35px auto;
+    }
+    .card .btn-details {
+      width: 80%;
+      height: 45px;
+      margin: 35px auto;
+      border-radius: 5px;
+      background-color: #284aa7;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      font-size: 25px;
+      letter-spacing: 10px;
+      font-weight: 700;
+      transition: all0.7s ease;
+    }
+    .card .btn-details:hover {
+      transform: scale(1.09);
+    }
+    .card .actions {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 20px;
+    }
+    .actions i {
+      font-size: 24px;
+      transition: all 0.7s ease;
+      color: var(--current-color2);
+    }
+    .actions:hover i {
+      transform: scale(1.3);
+    }
+    #s1:checked ~ .cards #slide4,
+    #s2:checked ~ .cards #slide5,
+    #s3:checked ~ .cards #slide1,
+    #s4:checked ~ .cards #slide2,
+    #s5:checked ~ .cards #slide3 {
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 45%);
+      transform: translate3d(-70%, 0, -220px);
+      --current-color1: #eceaed;
+      --current-color2: #404457;
+    }
+    #s1:checked ~ .cards #slide5,
+    #s2:checked ~ .cards #slide1,
+    #s3:checked ~ .cards #slide2,
+    #s4:checked ~ .cards #slide3,
+    #s5:checked ~ .cards #slide4 {
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 45%);
+      transform: translate3d(-35%, 0, -120px);
+      --current-color1: #eceaed;
+      --current-color2: #404457;
+    }
+    #s1:checked ~ .cards #slide1,
+    #s2:checked ~ .cards #slide2,
+    #s3:checked ~ .cards #slide3,
+    #s4:checked ~ .cards #slide4,
+    #s5:checked ~ .cards #slide5 {
+      box-shadow: 0 25px 50px rgba(0, 0, 0, 50%);
+      transform: translate3d(0, 0, 0);
+      --current-color1: #fad00c;
+      --current-color2: #eceaed;
+    }
+    #s1:checked ~ .cards #slide2,
+    #s2:checked ~ .cards #slide3,
+    #s3:checked ~ .cards #slide4,
+    #s4:checked ~ .cards #slide5,
+    #s5:checked ~ .cards #slide1 {
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 50%);
+      transform: translate3d(35%, 0, -120px);
+      --current-color1: #eceaed;
+      --current-color2: #404457;
+    }
+    #s1:checked ~ .cards #slide3,
+    #s2:checked ~ .cards #slide4,
+    #s3:checked ~ .cards #slide5,
+    #s4:checked ~ .cards #slide1,
+    #s5:checked ~ .cards #slide2 {
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 45%);
+      transform: translate3d(70%, 0, -220px);
+      --current-color1: #eceaed;
+      --current-color2: #404457;
+    }
   }
