--- a/css/mainV.css
+++ b/css/mainV.css
@@ -40,6 +40,19 @@
       margin: 4px 0px 6px 5px;
       color: black; }
 
+/* Responsive */
+@media screen and (max-width: 1023px) {
+  .logoP img, .maslogos img {
+    width: 150px;
+    height: 150px; }
+  .logoP h1, .maslogos h1 {
+    font-size: 26px; }
+  .maslogos img {
+    width: 30px;
+    height: 30px; }
+  .maslogos button p {
+    font-size: 12px; } }
+
 * {
   margin: 0;
   border: 0;
@@ -348,17 +361,11 @@ p {
   justify-content: center;
   background-color: #CD5C5C; }
 
-input {
-  display: none; }
-
 .contvol-5 {
   background-color: #CD5C5C;
   display: flex;
   justify-content: center;
-  align-items: center;
-  transform-style: preserve-3d;
-  flex-direction: column;
-  margin: 100px 0px 0px 100px; }
+  margin-left: 100%; }
 
 .cards {
   position: relative;
