--- a/scss/_basquetball.scss
+++ b/scss/_basquetball.scss
@@ -7,6 +7,7 @@
     font-family: "Poppins", sans-serif;
     box-sizing: border-box;
 }
+
 .padre1{
     justify-content: space-between;
     display: flex;
@@ -25,25 +26,19 @@
     background-color: #FF4500;
     margin-left: 40px;
 }
-
 .marco-bas{
     margin: auto;
 }
 
-.container{
-    font-family: sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10vmin;
-    overflow: hidden;
-    transform: skew(5deg);
-
-}
 
 .carrusel{
-    height: 250px;
-    width: 250px;
+    height: 200px;
+    width: 220px;
+}
+
+.carrusel-img{
+    height: 200px;
+    width: 180px;
 }
 
 
@@ -101,10 +96,7 @@
     transform: rotate(0deg) skew(-5deg);
 }
 
-h1{
-    font-size: 10px;
-    text-align: center;
-}*/
+*/
 
 
 footer{
@@ -172,10 +164,10 @@ h3{
     color: rgb(175, 50, 50);
     padding: 25px;
 }
-.a-footer{
+a{
     text-decoration: none;
 }
-.a-footer:hover{
+a:hover{
     color: #f18930;
 }
 
