--- a/css/main.css
+++ b/css/main.css
@@ -493,18 +493,13 @@ h3 {
 .marco-bas {
   margin: auto; }
 
-.container {
-  font-family: sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10vmin;
-  overflow: hidden;
-  transform: skew(5deg); }
-
 .carrusel {
-  height: 250px;
-  width: 250px; }
+  height: 200px;
+  width: 220px; }
+
+.carrusel-img {
+  height: 200px;
+  width: 180px; }
 
 /*.card{
     flex: 1;
@@ -560,10 +555,7 @@ h3 {
     transform: rotate(0deg) skew(-5deg);
 }
 
-h1{
-    font-size: 10px;
-    text-align: center;
-}*/
+*/
 footer {
   background: #343434;
   padding-top: 50px; }
@@ -627,10 +619,10 @@ h3 {
   color: #af3232;
   padding: 25px; }
 
-.a-footer {
+a {
   text-decoration: none; }
 
-.a-footer:hover {
+a:hover {
   color: #f18930; }
 
 .social-icons i:hover {
@@ -980,7 +972,10 @@ body {
     .dietas .dietas-recetas-2 #img1, .rutinas .dietas-recetas-2 #img1 {
       height: 1px; }
     .dietas .dietas-recetas-2 #img2, .rutinas .dietas-recetas-2 #img2 {
-      height: 1px; } }
+      height: 1px; }
+  /*UBICACIONES*/
+  .ubicacion {
+    height: 700px; } }
 
 * {
   padding: 0;
