--- a/scss/_basquetball.scss
+++ b/scss/_basquetball.scss
@@ -1,6 +1,6 @@
 @import "menu";
 @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Griffy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import "footer";
 *{
     margin: 0;
     border: 0;
@@ -29,7 +29,6 @@
 .marco-bas{
     margin: auto;
 }
-
 
 .carrusel{
     height: 200px;
@@ -103,13 +102,13 @@ footer{
     background: #343434;
     padding-top: 50px;
 }
-.container{
+.footer1-container{
     width: 1140px;
     margin: auto;
     display: flex;
     justify-content: center;
 }
-.footer-content{
+.footer2-content{
     width: 33.5%;
 }
 h3{
@@ -117,7 +116,7 @@ h3{
     margin-bottom: 15px;
     text-align: center;
 }
-.footer-content p{
+.footer3-content p{
     width: 190px;
     margin: auto;
     padding: 7px;
