--- a/css/mainNat.css
+++ b/css/mainNat.css
@@ -35,6 +35,10 @@
     .maslogos button:hover {
       background: linear-gradient(to right, #0e788d85, #19ffff98);
       border: solid #25645a 1px; }
+    .maslogos button a {
+      display: flex;
+      text-decoration: none;
+      align-items: center; }
     .maslogos button p {
       font-size: 16px;
       margin: 4px 0px 6px 5px;
@@ -52,6 +56,93 @@
     height: 30px; }
   .maslogos button p {
     font-size: 12px; } }
+
+* {
+  padding: 0;
+  margin: 0; }
+
+footer {
+  background: #343434;
+  padding-top: 50px; }
+
+.container {
+  width: 1140px;
+  margin: auto;
+  display: flex;
+  justify-content: center; }
+
+.footer-content {
+  width: 33.5%; }
+
+h3 {
+  font-size: 28px;
+  margin-bottom: 15px;
+  text-align: center; }
+
+.footer-content p {
+  width: 190px;
+  margin: auto;
+  padding: 7px; }
+
+.footer-content ul {
+  text-align: center; }
+
+.list {
+  padding: 0; }
+
+.list li {
+  width: auto;
+  text-align: center;
+  list-style-type: none;
+  padding: 7px;
+  position: relative; }
+
+.list li::before {
+  content: "";
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 100%;
+  width: 0;
+  height: 2px;
+  background: #f18930;
+  transition-duration: .5s; }
+
+.list li:hover::before {
+  width: 70px; }
+
+.social-icons {
+  text-align: center;
+  padding: 0; }
+
+.social-icons li {
+  display: inline-block;
+  text-align: center;
+  padding: 25px; }
+
+.social-icons i {
+  color: #af3232;
+  padding: 25px; }
+
+.a-footer {
+  text-decoration: none; }
+
+.a-footer:hover {
+  color: #f18930; }
+
+.social-icons i:hover {
+  color: #f18930; }
+
+.bottom-bar {
+  background: #f18930;
+  text-align: center;
+  padding: 10px 0;
+  margin-top: 50px; }
+
+.bottom-bar p {
+  color: #343434;
+  margin: 0;
+  font-size: 16px; }
 
 * {
   font-family: "Poppins", sans-serif; }
@@ -279,7 +370,7 @@
 input {
   display: none; }
 
-.container {
+.containerNat {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -460,152 +551,4 @@ input {
     height: 100%; }
   .contcolum {
     flex-direction: column;
-    align-items: center; }
-  input {
-    display: none; }
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform-style: preserve-3d;
-    flex-direction: column;
-    margin: 100px 0px 0px 100px; }
-  .cards {
-    position: relative;
-    height: 500px;
-    width: 430px;
-    margin-bottom: 20px;
-    perspective: 1000px;
-    transform-style: preserve-3d; }
-  .cards label {
-    position: absolute;
-    border-radius: 15px;
-    width: 400px;
-    left: 0;
-    right: 0;
-    margin: auto;
-    cursor: pointer;
-    transition: transform 0.5s ease; }
-  .cards .card {
-    position: relative;
-    height: 600px;
-    width: 400px;
-    background-color: #b2e9ff;
-    border-radius: 10px;
-    padding: 30px 35px;
-    border: 2px solid #284aa7; }
-  .cards .image {
-    display: flex;
-    justify-content: space-between; }
-  .cards .image img {
-    border-radius: 5px;
-    box-shadow: 15px 15px 40px black;
-    margin-top: 23px;
-    width: 86%;
-    height: 220px;
-    object-fit: cover;
-    transition: all 0.7s; }
-  .cards .image img:hover {
-    transform: scale(1.05); }
-  .cards .image .dots {
-    text-align: center; }
-  .dots div {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    margin-bottom: 10px; }
-  .dots div:nth-child(1) {
-    background-color: var(--current-color1); }
-  .dots div:nth-child(2) {
-    background-color: #5b85f9; }
-  .dots div:nth-child(3) {
-    background-color: #000; }
-  .card .infos {
-    display: block;
-    text-align: center;
-    padding-top: 60px; }
-  .card .infos span {
-    display: block; }
-  .infos .name {
-    font-size: 20px;
-    color: #3362e4;
-    letter-spacing: 8px;
-    margin-bottom: 20px;
-    padding-left: 25%;
-    transition: all 0.6s ease; }
-  .card .lorem {
-    font-size: 15.5px;
-    color: #eceaed;
-    margin: 35px auto; }
-  .card .btn-details {
-    width: 80%;
-    height: 45px;
-    margin: 35px auto;
-    border-radius: 5px;
-    background-color: #284aa7;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    font-size: 25px;
-    letter-spacing: 10px;
-    font-weight: 700;
-    transition: all0 0.7s ease; }
-  .card .btn-details:hover {
-    transform: scale(1.09); }
-  .card .actions {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px; }
-  .actions i {
-    font-size: 24px;
-    transition: all 0.7s ease;
-    color: var(--current-color2); }
-  .actions:hover i {
-    transform: scale(1.3); }
-  #s1:checked ~ .cards #slide4,
-  #s2:checked ~ .cards #slide5,
-  #s3:checked ~ .cards #slide1,
-  #s4:checked ~ .cards #slide2,
-  #s5:checked ~ .cards #slide3 {
-    box-shadow: 0 15px 30px black;
-    transform: translate3d(-70%, 0, -220px);
-    --current-color1: #eceaed;
-    --current-color2: #404457; }
-  #s1:checked ~ .cards #slide5,
-  #s2:checked ~ .cards #slide1,
-  #s3:checked ~ .cards #slide2,
-  #s4:checked ~ .cards #slide3,
-  #s5:checked ~ .cards #slide4 {
-    box-shadow: 0 20px 40px black;
-    transform: translate3d(-35%, 0, -120px);
-    --current-color1: #eceaed;
-    --current-color2: #404457; }
-  #s1:checked ~ .cards #slide1,
-  #s2:checked ~ .cards #slide2,
-  #s3:checked ~ .cards #slide3,
-  #s4:checked ~ .cards #slide4,
-  #s5:checked ~ .cards #slide5 {
-    box-shadow: 0 25px 50px black;
-    transform: translate3d(0, 0, 0);
-    --current-color1: #fad00c;
-    --current-color2: #eceaed; }
-  #s1:checked ~ .cards #slide2,
-  #s2:checked ~ .cards #slide3,
-  #s3:checked ~ .cards #slide4,
-  #s4:checked ~ .cards #slide5,
-  #s5:checked ~ .cards #slide1 {
-    box-shadow: 0 20px 40px black;
-    transform: translate3d(35%, 0, -120px);
-    --current-color1: #eceaed;
-    --current-color2: #404457; }
-  #s1:checked ~ .cards #slide3,
-  #s2:checked ~ .cards #slide4,
-  #s3:checked ~ .cards #slide5,
-  #s4:checked ~ .cards #slide1,
-  #s5:checked ~ .cards #slide2 {
-    box-shadow: 0 15px 30px black;
-    transform: translate3d(70%, 0, -220px);
-    --current-color1: #eceaed;
-    --current-color2: #404457; } }
+    align-items: center; } }
