--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -44,6 +44,12 @@
             border: solid #25645a 1px;
         }
 
+        a{
+            display: flex;
+            text-decoration: none;
+            align-items: center;
+        }
+
         p{
             font-size: 16px;
             margin: 4px 0px 6px 5px;
